Salesforce/force-app/main/default/objects/HWI_Document_Pack__mdt/HWI_Document_Pack__mdt.object-meta.xml
<CustomObject>
    <description>The different documents that make up the packs</description>
    <label>HWI Document Pack</label>
    <pluralLabel>HWI Document Packs</pluralLabel>
</CustomObject>