Salesforce/force-app/main/default/objects/HWI_Document_Pack__mdt/fields/Active_Docs_Template__c.field-meta.xml
<CustomField>
    <fullName>Active_Docs_Template__c</fullName>
    <inlineHelpText>The name of the document to be generated, inserts in to the Policy Transaction field Document Name, which then is used in the formula field Document Type. Document Type is what EDS uses for selecting the ActiveDoc template</inlineHelpText>
    <label>Active Docs Template</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Cover</fullName>
                <default>true</default>
                <label>Additional Cover</label>
            </value>
            <value>
                <fullName>Amend Insurance Certificate</fullName>
            </value>
            <value>
                <fullName>Amend Notice of Cover</fullName>
            </value>
            <value>
                <fullName>Construction Notification</fullName>
            </value>
            <value>
                <fullName>Deemed 68 NEW Leg</fullName>
            </value>
            <value>
                <fullName>Deemed 69 OLD Leg</fullName>
            </value>
            <value>
                <fullName>Insurance Certificate</fullName>
            </value>
            <value>
                <fullName>Insurance Search</fullName>
            </value>
            <value>
                <fullName>Notice of Cover</fullName>
            </value>
            <value>
                <fullName>Statutory Declaration</fullName>
            </value>
            <value>
                <fullName>Tax Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>