Salesforce/force-app/main/default/objects/HWI_Document_Pack__mdt/fields/Document_Pack__c.field-meta.xml
<CustomField>
    <fullName>Document_Pack__c</fullName>
    <inlineHelpText>Which Document Pack this is apart of</inlineHelpText>
    <label>Document Pack</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>