Salesforce/force-app/main/default/objects/HWI_Document_Pack__mdt/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Builder</fullName>
                <default>true</default>
                <label>Builder</label>
            </value>
            <value>
                <fullName>Current User</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>