Salesforce/force-app/main/default/objects/HWI_Document_Pack__mdt/fields/Use_Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Use_Alternative_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Alternative Email</label>
    <type>Checkbox</type>
</CustomField>