Salesforce/force-app/main/default/objects/HWI_Document_Pack__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Document_Pack__c</columns>
    <columns>Sequence_No__c</columns>
    <columns>Active_Docs_Template__c</columns>
    <columns>Recipient_Type__c</columns>
    <columns>Use_Alternative_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>